src/frontend/composeApp/src/commonMain/kotlin/org/example/project/domain/error/Error.kt
package org.example.project.domain.error

sealed interface Error